# wiki-summarizer

./: .dockerignore  Dockerfile  README.md  pyproject.toml
app/: agent.py  config.py  deps.py  main.py  routes.py  schemas.py
tests/: test_agent.py  test_app.py  test_functional.py
